--- a/bonus/index.html
+++ b/bonus/index.html
@@ -14,23 +14,7 @@
     <div class="container">
         <div class="image-container">
             <div class="item active">
-                <img src="img/01.webp" alt="" srcset="">
-            </div>
-            
-            <div class="item">
-                <img src="img/02.webp" alt="" srcset="">
-            </div>
-
-            <div class="item">
-                <img src="img/03.webp" alt="" srcset="">
-            </div>
-
-            <div class="item ">
-                <img src="img/04.webp" alt="" srcset="">
-            </div>
-
-            <div class="item">
-                <img src="img/05.webp" alt="" srcset="">
+                <img id="img" src="" alt="" srcset="">
             </div>
 
             <button id="next"><i class="fa-solid fa-chevron-up" style="color: #ffffff;"></i></button>
