bug thumbnails slide next on js

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -19,6 +19,15 @@
 
             <button id="next"><i class="fa-solid fa-chevron-up" style="color: #ffffff;"></i></button>
             <button id="previous"><i class="fa-solid fa-chevron-down" style="color: #ffffff;"></i></button>
+
+            <div class="thumbnails">
+                <img class="thumb-item filter-none" src="img/01.webp" alt="" srcset="">
+                <img class="thumb-item" src="img/02.webp" alt="" srcset="">
+                <img class="thumb-item" src="img/03.webp" alt="" srcset="">
+                <img class="thumb-item" src="img/04.webp" alt="" srcset="">
+                <img class="thumb-item" src="img/05.webp" alt="" srcset="">
+            </div>
+
         </div>
     </div>
 
